# hippa-compliant-railway-stack

./: .gitignore  .tflint.hcl  LICENSE  README.md  template.json
agent-os/: config.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json  verify_database.py
backend/alembic/: env.py
backend/alembic/versions/: 20251015_1506_1ef269d5fac7_enable_pgvector_extension.py  20251016_1204_281e991e2aee_create_audit_logs_table.py  20251016_1204_37efbbdd6e44_create_users_table.py  20251016_1204_63042ce5f838_create_vector_and_performance_indexes.py  20251016_1204_dd4cd840bc88_create_tenants_table.py  20251016_1204_e2495309c71b_create_documents_table.py  20251016_1205_f6g7h8i9j0k1_enable_row_level_security.py
backend/app/: config.py  main.py
backend/app/api/v1/: auth.py  health.py
backend/app/auth/: dependencies.py  jwks_cache.py  jwt_validator.py  tenant_extractor.py
backend/app/database/: base.py  engine.py
backend/app/middleware/: exception.py  logging.py  tenant_context.py
backend/app/models/: __init__.py  audit_log.py  document.py  tenant.py  user.py
backend/app/utils/: errors.py  logger.py  secrets_manager.py
backend/docs/: API_ARCHITECTURE.md  AUTH_CONFIGURATION.md  DEPLOYMENT.md  ERROR_CODES.md  HIPAA_READINESS.md  POSTGRESQL_TUNING.md  RAILWAY_ENV.md  RAILWAY_SETUP.md
backend/scripts/: load-terraform-outputs.sh  startup.sh
backend/tests/: __init__.py  conftest.py
backend/tests/test_api/: test_auth.py  test_health.py
backend/tests/test_audit/: __init__.py  test_audit_log_immutability.py
backend/tests/test_auth/: __init__.py  test_jwt_validator.py
backend/tests/test_config/: test_cors_config.py  test_terraform_outputs.py
backend/tests/test_middleware/: test_exception.py  test_logging.py  test_tenant_context.py
backend/tests/test_models/: test_models.py  test_soft_delete.py
backend/tests/test_rls/: __init__.py  test_fuzz_tenant_leakage.py  test_tenant_isolation.py
backend/tests/test_utils/: __init__.py  test_errors.py
docs/: AWS_TEST_ENVIRONMENT_SETUP.md  HIPAA_COMPLIANCE_MAPPING.md  RAILWAY_ENVIRONMENT_VARIABLES.md  TERRAFORM_COST_OPTIMIZATION.md  TERRAFORM_DEPLOYMENT.md  TERRAFORM_DISASTER_RECOVERY.md  TERRAFORM_MULTI_ENVIRONMENT_STRATEGY.md  TERRAFORM_OPERATIONS_RUNBOOK.md  TERRAFORM_RAILWAY_INTEGRATION.md  (+1 more)
(+108 files in other folders)
